testingGit now is problem 1 of apcs

--- a/testingGit/nbproject/private/private.properties
+++ b/testingGit/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=/home/weznon/.tmcbeans/dev/build.properties
+user.properties.file=C:\\Users\\plotnw\\AppData\\Roaming\\.tmcbeans\\dev\\build.properties
