--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /testingGit/nbproject/private/
 /apcsPRoblems/nbproject/private/
 /cosmicAI/banditAI/nbproject/private/
+/apcsProblems/nbproject/private/
