--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /apcsPRoblems/nbproject/private/
 /cosmicAI/banditAI/nbproject/private/
 /apcsProblems/nbproject/private/
+/ctyProject2/nbproject/private/
+/ctyProject2/build/
