--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /apcsProblems/nbproject/private/
 /ctyProject2/nbproject/private/
 /ctyProject2/build/
+/JavaApplication6/nbproject/private/
+/JavaApplication6/build/
